<resources>
    <string name="app_name">TestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_account">Already have an account? Log in</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>


    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="trade_by">Trade by bata</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="location">Location</string>

    <string name="not_implemented">Not implemented yet</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">kids</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>

    <string name="error_email_already_taken">Email already taken.\nLog in or enter another email</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_empty_fields">Please fill all the fields</string>
    <string name="error_wrong_credentials">User not found, please check your credentials</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="choose_color">Color:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_to_cart">Add to cart</string>
</resources>