<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.Page1Fragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_nav_drawer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:text="@string/trade_by"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:drawablePadding="2dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textColor="@color/page1_text"
            android:textFontWeight="400"
            android:textSize="10sp"
            app:drawableEndCompat="@drawable/ic_arrow_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool_bar" />

        <include
            android:id="@+id/search"
            layout="@layout/input_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/categories_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:paddingStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="6"
                tools:listitem="@layout/categories_item" />

        </androidx.core.widget.NestedScrollView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories_container">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="100dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_latest"
                        style="@style/page1_subtitle"
                        android:layout_marginTop="29dp"
                        android:text="@string/latest"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/page1_view_all"
                        android:text="@string/view_all"
                        app:layout_constraintBottom_toBottomOf="@id/title_latest"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/latest"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:paddingHorizontal="11dp"
                        android:paddingVertical="2dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_latest"
                        tools:itemCount="10"
                        tools:listitem="@layout/latest_listitem" />

                    <TextView
                        android:id="@+id/title_flash"
                        style="@style/page1_subtitle"
                        android:layout_marginTop="17dp"
                        android:text="@string/flash_sale"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/latest" />

                    <TextView
                        style="@style/page1_view_all"
                        android:text="@string/view_all"
                        app:layout_constraintBottom_toBottomOf="@id/title_flash"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/flash"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:paddingHorizontal="11dp"
                        android:paddingVertical="2dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_flash"
                        tools:itemCount="10"
                        tools:listitem="@layout/flash_listitem" />

                    <TextView
                        android:id="@+id/title_brands"
                        style="@style/page1_subtitle"
                        android:layout_marginTop="17dp"
                        android:text="@string/brands"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/flash" />

                    <TextView
                        style="@style/page1_view_all"
                        android:text="@string/view_all"
                        app:layout_constraintBottom_toBottomOf="@id/title_brands"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/brands"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:paddingHorizontal="11dp"
                        android:paddingVertical="2dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_brands"
                        tools:itemCount="10"
                        tools:listitem="@layout/latest_listitem" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>